--- a/views/dev/mockups.html
+++ b/views/dev/mockups.html
@@ -3,3 +3,15 @@
     <h1>{{localized.easter_egg.title}}</h1>
   </div>
 </div>
+
+<div class="container">
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+  <p id="flash">This function is deprecated, use `process.version` instead.</p>
+</div>
